--- a/Mitraphylline-pipeline-analysis.ipynb
+++ b/Mitraphylline-pipeline-analysis.ipynb
@@ -6,8 +6,6 @@
       "provenance": [],
       "machine_shape": "hm",
       "gpuType": "L4",
-      "mount_file_id": "12mLIHyrUD13Qwe3z-W6RhBTMelhX16Mk",
-      "authorship_tag": "ABX9TyNjPVHwoIjjcVeBIPAAtRiZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +42,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Step 1** - Connect your google drive that should contain a dataset downloaded from the COCONUT database."
+        "**Introduction** <Br> Connect your google drive that should contain a dataset downloaded from the [COCONUT database](https://coconut.naturalproducts.net/download). In this study we used Natural Product dataset released in December 2025. It contains collection of 715822 compounds in CSV format.<Br>This pipeline can be used for Chemical Space Analysis providing dataset and reference compound of your choice. Users are advised to upload their dataset in CSV formate to the Google Drive."
       ],
       "metadata": {
         "id": "c5MJGLDfJu6B"
@@ -53,34 +51,29 @@
     {
       "cell_type": "code",
       "source": [
+        "#@title Connect your Google Drive\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n"
       ],
       "metadata": {
-        "id": "nnEZycVr7g1l"
+        "id": "nnEZycVr7g1l",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "**GPU-Enabled Installation**"
-      ],
-      "metadata": {
-        "id": "vKQG05IsKCcZ"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
+        "#@title GPU_Enabled Installation\n",
         "!nvidia-smi\n",
         "!pip uninstall -y torch torchvision torchaudio nvidia-* cuml* cupy* faiss-gpu* || true\n",
         "!pip install --no-cache-dir nvidia-cuda-runtime-cu12\n",
         "!pip install --no-cache-dir cupy-cuda12x==13.6.0 faiss-gpu-cu12 cuml-cu12 libcuml-cu12 rdkit pandas matplotlib tqdm\n"
       ],
       "metadata": {
-        "id": "R99s7aIc7u-j"
+        "id": "R99s7aIc7u-j",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
@@ -88,7 +81,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Step 2** - Reading the complete dataset"
+        "**Step 1 - Reading the complete dataset**<Br> Please adjust path of your dataset location in below code. Also Edit label information of the features you want to keep in the analysis."
       ],
       "metadata": {
         "id": "1CsxeuSmKNPw"
@@ -127,7 +120,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Step 3** - Reading the dataset in chunks of 50K and calculate mmap"
+        "**Step 2 - Reading the dataset in chunks of 50K and calculate mmap**<br> The following code will attempt to read your dataste in Chunk of 50,000 entries, inorder to minimize chances of memory crash."
       ],
       "metadata": {
         "id": "ALJX9oZ8KjcI"
@@ -187,7 +180,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Step 4** - Calculation of FAISS Indexing from the mmap"
+        "**Step 3 - Calculation of FAISS Indexing from the mmap**<br> Here we are interested to calculate the FAISS indeces."
       ],
       "metadata": {
         "id": "0LpYQS_jK2D4"
@@ -246,7 +239,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Step 5** - Calculate Neighbourhoods based on Cosine Similarity"
+        "**Step 4 - Calculate Neighbourhoods based on Cosine Similarity**<br> You will be required to provide your reference molecule in _SMILES_ formate."
       ],
       "metadata": {
         "id": "sx1wKzUwLCJo"
@@ -287,7 +280,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Step 6** - Generation of UMAP embeddings"
+        "**Step 5 - Generation of UMAP embeddings**"
       ],
       "metadata": {
         "id": "OGKSBwwGLPA9"
@@ -324,7 +317,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Step 7** - Calculation of KMeans"
+        "**Step 6 - Calculation of KMeans**"
       ],
       "metadata": {
         "id": "7UlrIWNPLaAY"
@@ -349,7 +342,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Step 8** - Generation of MurckoScaffold"
+        "**Step 7 - Generation of MurckoScaffold**"
       ],
       "metadata": {
         "id": "8huMBK2ULirQ"
@@ -383,7 +376,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Figure 1**"
+        "**Visualization** - **Figure 1**"
       ],
       "metadata": {
         "id": "IxHFRUUkLZS8"
@@ -539,7 +532,7 @@
         "id": "JSnkyFjV9EEr",
         "outputId": "2e972ee0-fc38-41a6-ef8a-c1ec34086eca"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -635,7 +628,7 @@
         "id": "tGu4-W9d-DaC",
         "outputId": "8a01562d-1ceb-4fd4-e914-df03f66a43b6"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -736,7 +729,7 @@
         "id": "NfccZObVCwjx",
         "outputId": "4af5c7be-e007-431b-db7e-f0b82583cf7b"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -825,7 +818,7 @@
         "id": "OWvAbS1rC3Vw",
         "outputId": "9219ae6b-7bb2-4ea3-a020-6fb359724693"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -903,7 +896,7 @@
         "id": "uigHTKJvC6F6",
         "outputId": "ce9c5e69-cae0-4536-8a39-27eab7724c3e"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1074,7 +1067,7 @@
         "id": "U1eSLvUQHzOJ",
         "outputId": "ecc2c6b2-571d-4d42-f51a-95bc17b14bc8"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1154,7 +1147,7 @@
         "id": "OXn35NQBPR4T",
         "outputId": "eaa07d1a-dd46-4212-c872-6bfe85719bf0"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
