--- a/Mitraphylline-pipeline-analysis.ipynb
+++ b/Mitraphylline-pipeline-analysis.ipynb
@@ -33,7 +33,9 @@
       "source": [
         "This pipeline is linked to the analyses conducted for a research manuscript **Mitraphylline and Its Chemical Neighbourhood in Organic dataset Drive Opportunities for Scaffold Aware Discovery**.\n",
         "\n",
-        "Please report any issue to the cooresponding author on **ashfaqahmad82@hotmail.com**."
+        "Please report any issue to the cooresponding author on **ashfaqahmad82@hotmail.com**.\n",
+        "\n",
+        "**Citation:** Under Review"
       ],
       "metadata": {
         "id": "3KJ4l7DkJREk"
